--- a/REST API Report/Analysis.tex
+++ b/REST API Report/Analysis.tex
@@ -1,24 +1,14 @@
 \section{Analysis}
 
-While answering the high-level research question  \textbf{RQ1} on \textit{Is there a relation between design- and linguistic quality in RESTful APIs?} \textcolor{blue}{Yes.} Based on Chi square test there is a relationship between design and linguistic quality in REST APIs. The Chi square test where a combination of antipatterns, patterns, and a mix of both. \textcolor{blue}{The p-value was very low indicating a significant relation.}
-
-While answering the first sub-research question \textbf{RQ1.1} on \textit{Is there a relation between design and linguistic antipatterns in RESTful APIs?} \textcolor{blue}{Yes.} according to the Phi coefficient pairwise tests between the design and linguistic antipatterns there is a moderate positive relationship between CRUDy URIs and Misusing Cookies. This is the strongest relation followed by a weak positive relationship for Contextless Resource Names vs Ignoring Status Code.
-
-While answering the second sub-research question \textbf{RQ1.2} on \textit{Is there a relation between design patterns and linguistic antipatterns in RESTful APIs?} \textcolor{blue}{No.} We only define three patterns for REST design and two of these - Response Caching and  Entity Linking - are present in every endpoint. In other words there where no corresponding antipattern detected. This most likely impacted this result. The results indicate a weak negative relation between the linguistic pattern Tidy URIs and the design pattern Content Negotiation. Not much else can be said for this research question.
-
-While answering the third sub-research question  \textbf{RQ1.3} on \textit{Is there a relation between design antipatterns and linguistic patterns in RESTful APIs?} \textcolor{blue}{Yes.} We can see that there is an overall negative relationship between these two. If there are design antipatterns linguistic pattern seem to be less common also. As in RQ1.2, a lot of the pairwise tests could not yield any definitive conclusion.
-
-While answering the fourth sub-research question \textbf{RQ1.4} on \textit{Is there a relation between design- and linguistic patterns in RESTful APIs?} \textcolor{blue}{Yes.} Here we find a weak positive relationship in the pairwise phi coefficient tests between Amorphous URIs and Content Negotiation.
-
 \subsection{\textcolor{red}{RQ1: Is there a relation between design- and linguistic quality in RESTful APIs?}}
 
-\textcolor{red}{Yes.}
+\textcolor{red}{No such conclusion can be drawn from our research. This is because our results from the SARA program are unreliable.}
 
-\textcolor{red}{Based on the Chi square test there is a relationship between design and linguistic quality in REST APIs. The Chi square test where a combination of antipatterns, patterns, and a mix of both.} \textcolor{blue}{The p-value was very low indicating a significant relation.}
+\textcolor{red}{Based on the Chi square test there is a relationship between design and linguistic quality in REST APIs. The Chi square test were a combination of antipatterns, patterns, and a mix of both.} \textcolor{blue}{The p-value was low indicating a significant relation.}
 
 \subsection{\textcolor{red}{RQ1.1: Is there a relation between design and linguistic antipatterns in RESTful APIs?}}
 
-\textcolor{red}{Yes.}
+\textcolor{red}{No such conclusion can be drawn from our research. This is because our results from the SARA program are unreliable.}
 
 \textcolor{red}{
 There is a moderate positive relation between the linguistic antipattern CRUDy URIs and the design antipattern Misusing Cookies. This means that our result indicates a heightened likelihood of occurrences of one of these aspect if the other is frequently occurring. 
@@ -29,6 +19,8 @@ All the other pairwise comparisons resulted in relations that were weak, negligi
 }
 
 \subsection{\textcolor{red}{RQ1.2: Is there a relation between design patterns and linguistic antipatterns in RESTful APIs?}}
+
+\textcolor{red}{No such conclusion can be drawn from our research. This is because our results from the SARA program are unreliable.}
 
 \textcolor{red}{No moderate or strong relations were found.}
 
@@ -42,7 +34,7 @@ This can be explained by the fact that both moderate relations found in our resu
 
 \subsection{\textcolor{red}{RQ1.3: Is there a relation between design antipatterns and linguistic patterns in RESTful APIs?}}
 
-\textcolor{red}{Yes.}
+\textcolor{red}{No such conclusion can be drawn from our research. This is because our results from the SARA program are unreliable.}
 
 \textcolor{red}{
 There is a moderate negative relation between the linguistic pattern Verbless URIs and the design antipattern Misusing Cookies. This means that our result indicates a heightened likelihood of occurances of one of these aspects if the other is frequently occuring. Verbless URIs is the corresponding linguistic pattern of the linguistic antipattern CRUDy URIs. 
@@ -53,6 +45,8 @@ All the other pairwise comparisons resulted in relations that were weak, negligi
 }
 
 \subsection{\textcolor{red}{RQ1.4: Is there a relation between design- and linguistic patterns in RESTful APIs?}}
+
+\textcolor{red}{No such conclusion can be drawn from our research. This is because our results from the SARA program are unreliable.}
 
 \textcolor{red}{No moderate or strong relations were found.}
 
