--- a/REST API Report/Report.tex
+++ b/REST API Report/Report.tex
@@ -14,8 +14,12 @@
 
 \documentclass[a4paper,12pt]{article}
 \usepackage[maxfloats=256]{morefloats}
-\usepackage{algorithm}
-\usepackage{algorithmic}
+\usepackage[nothing]{algorithm}
+\usepackage[noend]{algpseudocode}
+\algnewcommand\In{\textbf{ in } }
+\algnewcommand\And{\textbf{ and } }
+\algnewcommand\Or{\textbf{ or } }
+\algnewcommand\ArrowFunction{\textbf{ => } }
 \usepackage[T1]{fontenc}
 \usepackage{times}
 \usepackage[english]{babel}
