--- a/REST API Report/referenser.bib
+++ b/REST API Report/referenser.bib
@@ -1,3 +1,39 @@
+@electronic{courseroom,
+author = {{Linnaeus University}},
+title = {Course {R}oom for {D}egree {P}rojects},
+year = 2015,
+url = {https://mymoodle.lnu.se/course/view.php?id=5297\#section-4}
+}
+@electronic{ieeeguide,
+author = {{Monash University}},
+title = {Citing and referencing: {IEEE}},
+year = 2015,
+month = {Oct. 13},
+url = {http://guides.lib.monash.edu/citing-referencing/ieee}
+}
+@article{bigdata,
+author = {C. Lynch},
+title = {Big data: {H}ow do your data grow?},
+year = 2008,
+journal = {Nature},
+volume = 455,
+pages = {28-29}
+}
+@book{ai,
+author = {S. Russell and P. Norvig},
+edition = {3rd},
+publisher = {Prentice {H}all},
+title = {{Artificial Intelligence: A Modern Approach}},
+year = {2010}
+}
+@InProceedings{bigdata2,
+  title={{Big data and cloud computing: current state and future opportunities}},
+  booktitle={{Proceedings of the 14th International Conference on Extending Database Technology}},
+  author={D. Agrawal and S. Das and A. E. Abbadi},
+  pages = {530-533},
+  year={2011}
+}
+
 @misc{octogithub,
     author = {{GitHub}},
     title = {{The State of the Octoverse}},
@@ -41,6 +77,20 @@
     title = {{About Node.js}},
     note = {Accessed on: May 28, 2020},
     url = {https://nodejs.org/en/about/}
+}
+
+@misc{apa,
+    author = {{American Psychological Association}},
+    title = {{phi coefficient}},
+    note = {{Accessed on: July 3, 2020}},
+    url = {https://dictionary.apa.org/phi-coefficient}
+}
+
+@misc{scikitmcc,
+    author = {{scikit learn}},
+    title = {{sklearn.metrics.matthews\_corrcoef}},
+    note = {{Accessed on: July 3, 2020}},
+    url = {https://scikit-learn.org/stable/modules/generated/sklearn.metrics.matthews_corrcoef.html}
 }
 
 @misc{ohloh,
@@ -105,4 +155,14 @@
   pages={104--158},
   year={2016},
   publisher={Springer}
+}
+
+@inbook{Osborn,
+author = {C. Osborn},
+edition = {2nd},
+publisher = {Jones and Bartlett Publishers, Inc},
+title = {{Statistical Applications for Health Information Management}},
+year = {2005},
+pages = {251--270},
+chapter = {Chi-Square}
 }
